<resources>
    <string name="name">zhang kun</string>
    <string name="app_name">Android Learning Template</string>
    <string name="email">zhan9kun@outlook.com</string>
    <string name="share_content">https://github.com/zkywalker/zky.git</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">设置</string>

    <string name="widget">控件</string>
    <string name="view">绘制</string>
    <string name="activity_fragment"><![CDATA[页面&碎片]]></string>
    <string name="sdk">第三方</string>
    <string name="share">分享</string>
    <string name="send">发邮件</string>
    <string name="communicate">交流</string>


    <string name="email_subject">daily android learning app feedback</string>
    <string name="no_email_app">没有发现可用的邮件app</string>
    <string name="i_know">知道了</string>
    <string name="str_test">吃玻璃不吐玻璃皮</string>
    <string name="recycler_view_card">叠堆卡片</string>
    <string name="rocker_view">摇杆</string>
    <string name="str_center">中</string>
    <string name="str_up">上</string>
    <string name="str_down">下</string>
    <string name="str_left">左</string>
    <string name="str_right">右</string>

    <string name="other">其他</string>

    <!-- Strings related to Settings -->

    <!--share preference key-->
    <string name="pref_title_splash">splash页面</string>
    <string name="pref_description_splash">是否显示splash screen
    </string>

    <string name="pref_title_theme">主题颜色</string>

    <string name="color_default">默认</string>
    <string name="color_blue">蓝色</string>
    <string name="color_red">红色</string>
    <string name="color_green">绿色</string>
    <string name="color_cyan">蓝绿色</string>
    <string name="color_purple">紫色</string>
    <string name="color_orange">橙色</string>
    <string name="color_pink">粉红色</string>
    <string name="color_teal">青色</string>

    <string-array name="pref_theme_titles">
        <item>@string/color_default</item>
        <item>@string/color_blue</item>
        <item>@string/color_red</item>
        <item>@string/color_green</item>
        <item>@string/color_cyan</item>
        <item>@string/color_purple</item>
        <item>@string/color_orange</item>
        <item>@string/color_pink</item>
        <item>@string/color_teal</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string name="key_splash">key_splash</string>
    <string name="key_theme">key_theme</string>
    <string name="skip">跳过</string>
    <string name="done">完成</string>
    <string name="pref_description_intro">是否进入app显示介绍页面</string>
    <string name="key_intro">key_introduction</string>
    <string name="pref_title_intro">介绍页面</string>
    <string name="default_introduction_activity">DefaultIntroductionActivity</string>
    <string name="stamp">邮票/礼券</string>
    <string name="splash_activity">SplashActivity</string>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="chrome_custom_tabs_activity">ChromeCustomTabsActivity</string>


</resources>
