<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_widget"
            android:icon="@drawable/ic_widgets_black_24dp"
            android:title="@string/widget" />
        <item
            android:id="@+id/nav_view"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/view" />
        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/ic_smartphone_black_24dp"
            android:title="@string/activity_fragment" />
        <item
            android:id="@+id/nav_sdk"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/sdk" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>
    <item android:title="@string/other" >
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/action_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                />
        </menu>

    </item>

</menu>
